# rust-lambda

./: .gitignore  README.md
async_await_fn/: Cargo.toml  deploy.sh  invoke.sh
async_await_fn/src/: main.rs
my_lambda_function/: Cargo.toml
my_lambda_function/src/: main.rs
my_lambda_function_v2/: Cargo.toml
my_lambda_function_v2/src/: main.rs
rust_dynamo_get_claps/: Cargo.toml  create.sh
rust_dynamo_get_claps/src/: main.rs
rust_dynamo_list_tables/: Cargo.toml  create.sh
rust_dynamo_post_claps/: Cargo.toml  test.sh
rust_dynamo_post_claps/src/: main.rs
rust_dynamo_post_claps_with_body/: Cargo.toml  deploy.sh  example.md
rust_dynamo_post_claps_with_body/src/: main.rs
rust_dynamo_query_claps/: Cargo.toml  invoke.sh
rust_dynamo_query_claps/src/: main.rs
rust_dynamo_query_github_items/: Cargo.toml  create.sh  deploy.sh
rust_dynamo_query_github_items/src/: main.rs
