[package]
name = "my_lambda_function_v2"
version = "0.1.0"
authors = ["Kevin Wang <kwangsan@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aws_lambda_events = "0.3.0"
lambda_runtime = "^0.2"
log = "^0.4"
simple_logger = "^1"
simple-error = "^0.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
