[package]
name = "rust_dynamo_query_claps"
version = "0.1.0"
authors = ["Kevin Wang <kwangsan@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lambda_runtime = "^0.2"
# https://github.com/awslabs/aws-lambda-rust-runtime/issues/216
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }

[dependencies.rusoto_core]
version = "0.43.0"
default-features = false
features = ["rustls"]

[dependencies.rusoto_dynamodb]
version = "0.43.0"
default-features = false
features = ["rustls", "serialize_structs"]

[[bin]]
name = "bootstrap"
path = "src/main.rs"
